# openmcapi-deprecated

./: .hg_archival.txt  .hgignore  Makefile  Makefile.am  Makefile.config  config.sub  configure.ac  wscript
demo/: Makefile.am  hi.c  linux_init.c
include/: mcapi.h  mcapi_impl_spec.h  openmcapi_cfg.h
include/linux/: mcapi_os.h
include/ucosii/: mcapi_os.h
libmcapi/: Makefile  Makefile.am  wscript
libmcapi/include/: lock.h  openmcapi.h
libmcapi/include/arch/arm/: barrier.h
libmcapi/include/arch/nios2/: barrier.h
libmcapi/mcapi/: buf_mgmt.c  cntrl_msg.c  connect.c  create_endpoint.c  data_avail.c  endpoint.c  interface.c  loopback.c  mcapi_cancel.c  mcapi_create_endp.c  mcapi_delete_endp.c  mcapi_finalize.c  mcapi_get_endp.c  mcapi_get_endp_attrib.c  mcapi_get_endp_i.c  mcapi_get_node_id.c  mcapi_init.c  mcapi_msg_avail.c  mcapi_msg_rcv.c  mcapi_msg_snd.c  mcapi_open_pktchan_rcv_i.c  mcapi_open_pktchan_snd_i.c  mcapi_open_sclchan_rcv_i.c  mcapi_open_sclchan_snd_i.c  mcapi_pktchan_avail.c  mcapi_pktchan_free.c  mcapi_pktchan_rcv.c  mcapi_pktchan_rcv_close_i.c  mcapi_pktchan_snd_close_i.c  mcapi_sclchan_avail.c  mcapi_sclchan_rcv_close_i.c  mcapi_sclchan_snd_close_i.c  mcapi_set_endp_attrib.c  mcapi_test.c  mcapi_wait.c  mcapi_wait_any.c  msg_rcv.c  msg_snd.c  pkt_rcv.c  pkt_snd.c  (+4 more)
libmcapi/mcapi/linux/: mcapi_os.c
libmcapi/mcapi/ucosii/: mcapi_os.c
libmcapi/shm/: shm.c  shm.h  shm_os.h  sysv.c  wscript
libmcapi/shm/linux/: shm_os.c
libmcapi/shm/linux/kmod/: Kbuild  Makefile  common.c  loop.c  mcomm.h  socfpga.c
libmcapi/shm/ucosii/: shm_os.c  socfpga.c  ucosii_mcomm.h
test/: Makefile  Makefile.am  mgmt_svc.c  mgmt_svc.h  wscript
test/1/: fts_defs.h  fts_mcapi_delete_endpoint.c  fts_mcapi_get_endpoint_attribute.c  fts_mcapi_msg_recv.c  fts_mcapi_msg_recv_i.c  fts_mcapi_msg_send.c  fts_mcapi_open_pktchan_recv_i.c  fts_mcapi_open_pktchan_send_i.c  fts_mcapi_pktchan_available.c  fts_mcapi_pktchan_recv_close_i.c  fts_mcapi_pktchan_send.c  fts_mcapi_pktchan_send_close_i.c  fts_mcapi_pktchan_send_i.c  fts_mcapi_sclchan_available.c  fts_mcapi_sclchan_recv_close_i.c  fts_mcapi_wait.c  fts_mcapi_wait_any.c
test/3/: mcapi_tests.c
test/default_demo/: client_server_demo.c  client_server_demo.h  demo_msg_client.c  demo_msg_server.c  demo_pkt_client.c  demo_pkt_server.c  demo_scl_client.c  demo_scl_server.c
test/func/: backend.c  frontend.c  fts_defs.h  fts_main.c  fts_mcapi_cancel.c  fts_mcapi_connect_pktchan_i.c  fts_mcapi_connect_sclchan_i.c  fts_mcapi_create_endpoint.c  fts_mcapi_delete_endpoint.c  fts_mcapi_get_endpoint.c  fts_mcapi_get_endpoint_i.c  fts_mcapi_msg_recv.c  fts_mcapi_msg_send.c  fts_mcapi_msg_send_i.c  fts_mcapi_open_pktchan_recv_i.c  fts_mcapi_open_pktchan_send_i.c  fts_mcapi_open_sclchan_recv_i.c  fts_mcapi_open_sclchan_send_i.c  fts_mcapi_pktchan_available.c  fts_mcapi_pktchan_free.c  fts_mcapi_pktchan_recv.c  fts_mcapi_pktchan_recv_close_i.c  fts_mcapi_pktchan_recv_i.c  fts_mcapi_pktchan_send.c  fts_mcapi_pktchan_send_close_i.c  fts_mcapi_pktchan_send_i.c  fts_mcapi_sclchan_available.c  fts_mcapi_sclchan_recv_close_i.c  fts_mcapi_sclchan_recv_x.c  fts_mcapi_sclchan_send_close_i.c  fts_mcapi_sclchan_send_x.c  fts_mcapi_test.c  fts_mcapi_wait.c  fts_mcapi_wait_any.c
test/support_suite/: create_svc.c  destroy_svc.c  mcapid_support.h  reg_svcs.c
test/support_suite/linux/: mcapid.h  os_linux_demo.c
util/: Makefile.am  memtool.c  wscript
